<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Quest_header"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:text="@string/quest_header"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/rounded"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/rv"
        />

    <Button
        android:id="@+id/addQuestbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addQuestBtnTxt"/>

    <EditText
        android:id="@+id/etAddQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addQuestEditTextHint"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/friendQuestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_quest_btn"/>

    <EditText
        android:id="@+id/friend_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/friend_prompt"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_button_text"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_btn"/>

</LinearLayout>