<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fb_login_prompt"
        android:textSize="18sp"
        android:text="@string/fb_prompt"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:paddingTop="80dp"
        android:id="@+id/email_login_prompt"
        android:textSize="18sp"
        android:text="@string/email_prompt"
        />

    <Button
        android:id="@+id/email_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_login_button"
        android:background="@drawable/rounded"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:drawablePadding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:minHeight="30dip"
        android:drawableStart="@android:drawable/ic_dialog_email"/>


</LinearLayout>
